--- a/NetworkGame/Server/Server.vcxproj
+++ b/NetworkGame/Server/Server.vcxproj
@@ -68,10 +68,14 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="InputHandler.cpp" />
+    <ClCompile Include="Player.cpp" />
     <ClCompile Include="ServerGame.cpp" />
     <ClCompile Include="ServerMain.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="InputHandler.h" />
+    <ClInclude Include="Player.h" />
     <ClInclude Include="ServerGame.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
