Working on client, input and drawing working.

--- a/NetworkGame/Client/Client.vcxproj
+++ b/NetworkGame/Client/Client.vcxproj
@@ -70,10 +70,12 @@
   <ItemGroup>
     <ClCompile Include="ClientGame.cpp" />
     <ClCompile Include="ClientMain.cpp" />
+    <ClCompile Include="ClientPlayer.cpp" />
     <ClCompile Include="Input.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="ClientGame.h" />
+    <ClInclude Include="ClientPlayer.h" />
     <ClInclude Include="Input.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
