--- a/NetworkGame/Client/Client.vcxproj.filters
+++ b/NetworkGame/Client/Client.vcxproj.filters
@@ -24,12 +24,18 @@
     <ClCompile Include="ClientMain.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="ClientPlayer.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Input.h">
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="ClientGame.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="ClientPlayer.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
